[gd_scene load_steps=32 format=3 uid="uid://7j0vkn3efadf"]

[ext_resource type="PackedScene" uid="uid://byqmrpsamkv7n" path="res://StaticObjects/Floor/Floor.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://bddul4h12wu7p" path="res://Player/Player.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://g0phogaltx16" path="res://StaticObjects/Block/Block.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://bgur3nf13inv" path="res://StaticObjects/Room/Room.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://dp1o68j4hq7ff" path="res://StaticObjects/SlopeLow/SlopeLow.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://ce0q4h50cq8ka" path="res://StaticObjects/SphereHalf/SphereHalf.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://bcg5whwosaq7j" path="res://StaticObjects/Cylinder/Cylinder.tscn" id="7"]
[ext_resource type="PackedScene" path="res://StaticObjects/Box/Box.tscn" id="8"]
[ext_resource type="PackedScene" uid="uid://v64mdkhwlrhh" path="res://StaticObjects/SlopeLowHalf/SlopeLowHalf.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://cfx2m0s6xyhm" path="res://StaticObjects/SlopeMiddleHalf/SlopeMiddleHalf.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://budt10fnpgo6h" path="res://StaticObjects/SlopeHighHalf/SlopeHighHalf.tscn" id="11"]
[ext_resource type="PackedScene" uid="uid://okjih4e11evm" path="res://StaticObjects/CrossPlate/CrossPlate.tscn" id="12"]
[ext_resource type="PackedScene" uid="uid://b814h6vh3fgno" path="res://StaticObjects/StairsLow/StairsLow.tscn" id="13"]
[ext_resource type="PackedScene" uid="uid://wp7qmjpkarrv" path="res://StaticObjects/StairsHigh/StairsHigh.tscn" id="14"]
[ext_resource type="Script" path="res://Scenes/PlayScene.gd" id="15"]
[ext_resource type="PackedScene" uid="uid://ckjckr5ltgpv6" path="res://MovingObjects/MovingPlatform/MovingPlatform.tscn" id="16"]
[ext_resource type="PackedScene" uid="uid://cixdlcg0n81ln" path="res://MovingObjects/MovingSlope/MovingSlope.tscn" id="17"]
[ext_resource type="PackedScene" uid="uid://dhbr7g1j3ngh8" path="res://MovingObjects/MovingPlatform2/MovingPlatform2.tscn" id="18"]
[ext_resource type="PackedScene" uid="uid://c8eih4mofi2ts" path="res://MovingObjects/MovingBoxes/MovingBoxes.tscn" id="19"]
[ext_resource type="PackedScene" uid="uid://dwjxnsu0dg3i2" path="res://MovingObjects/MovingLift/MovingLift.tscn" id="20"]
[ext_resource type="PackedScene" uid="uid://d4a7yd53a7y1r" path="res://MovingObjects/RollingCylinder/RollingCylinder.tscn" id="21"]
[ext_resource type="PackedScene" uid="uid://dbqkg2ro2yp3p" path="res://MovingObjects/SpinningPlane/SpinningPlane.tscn" id="22"]
[ext_resource type="PackedScene" uid="uid://c8tomvpr6e0h" path="res://MovingObjects/RollingPlane/RollingPlane.tscn" id="23"]
[ext_resource type="Script" path="res://Others/Pause.gd" id="24_4v7fj"]
[ext_resource type="Script" path="res://Scenes/Debug.gd" id="24_8udls"]
[ext_resource type="Script" path="res://Scenes/DebugDraw.gd" id="24_ac82k"]

[sub_resource type="PrismMesh" id="PrismMesh_3y0qp"]
size = Vector3(6, 11.007, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pcexi"]

[sub_resource type="ProceduralSkyMaterial" id="1"]

[sub_resource type="Sky" id="2"]
sky_material = SubResource( "1" )

[sub_resource type="Environment" id="3"]
background_mode = 2
sky = SubResource( "2" )

[node name="PlayScene" type="Node3D"]
script = ExtResource( "15" )

[node name="Player" parent="." instance=ExtResource( "2" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.831228, 0)

[node name="Rooms" type="Node3D" parent="."]
script = null

[node name="GeneralRoom" type="Node3D" parent="Rooms"]
script = null

[node name="Floor" parent="Rooms/GeneralRoom" instance=ExtResource( "1" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
use_collision = true

[node name="BlockTestRoom" type="Node3D" parent="Rooms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)
script = null

[node name="Block" parent="Rooms/BlockTestRoom" instance=ExtResource( "3" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 1, 0)

[node name="Block2" parent="Rooms/BlockTestRoom" instance=ExtResource( "3" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 1, -8.5)

[node name="Block3" parent="Rooms/BlockTestRoom" instance=ExtResource( "3" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.1, 1, -8.5)

[node name="Block4" parent="Rooms/BlockTestRoom" instance=ExtResource( "3" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -8.5)

[node name="Block5" parent="Rooms/BlockTestRoom" instance=ExtResource( "3" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 1, -8.1)

[node name="Block6" parent="Rooms/BlockTestRoom" instance=ExtResource( "3" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 1, -7.8)

[node name="Block7" parent="Rooms/BlockTestRoom" instance=ExtResource( "3" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.75, 1, -5.25)

[node name="Block8" parent="Rooms/BlockTestRoom" instance=ExtResource( "3" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.5, 1.5, 4.5)

[node name="Block9" parent="Rooms/BlockTestRoom" instance=ExtResource( "3" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 3, 4.5)

[node name="Block10" parent="Rooms/BlockTestRoom" instance=ExtResource( "3" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 1, 5)

[node name="Block11" parent="Rooms/BlockTestRoom" instance=ExtResource( "3" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 2, 5)

[node name="Block12" parent="Rooms/BlockTestRoom" instance=ExtResource( "3" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 3, 5)

[node name="Room" parent="Rooms/BlockTestRoom" instance=ExtResource( "4" )]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 0)

[node name="StairsLow" parent="Rooms/BlockTestRoom" instance=ExtResource( "13" )]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.2, 0, -2)

[node name="StairsHigh" parent="Rooms/BlockTestRoom" instance=ExtResource( "14" )]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -6.2, 0, 0)

[node name="SlopeTestRoom" type="Node3D" parent="Rooms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0)
script = null

[node name="Room" parent="Rooms/SlopeTestRoom" instance=ExtResource( "4" )]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="SphereHalf" parent="Rooms/SlopeTestRoom" instance=ExtResource( "6" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, -8)

[node name="SphereHalf2" parent="Rooms/SlopeTestRoom" instance=ExtResource( "6" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -5)

[node name="SlopeLow" parent="Rooms/SlopeTestRoom" instance=ExtResource( "5" )]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7, 0, 0)

[node name="Cylinder" parent="Rooms/SlopeTestRoom" instance=ExtResource( "7" )]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -2.5, 1, -9)

[node name="Cylinder2" parent="Rooms/SlopeTestRoom" instance=ExtResource( "7" )]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.5, 1, -7)

[node name="Box" parent="Rooms/SlopeTestRoom" instance=ExtResource( "8" )]
transform = Transform3D(0.782018, -0.376438, 0.496732, 0.612372, 0.612372, -0.5, -0.115966, 0.695194, 0.709406, 0, 1.75, -2)

[node name="SlopeLowHalf" parent="Rooms/SlopeTestRoom" instance=ExtResource( "9" )]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -7.5, 0, 8.5)

[node name="SlopeMiddleHalf" parent="Rooms/SlopeTestRoom" instance=ExtResource( "10" )]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2.5, 0, 8.5)

[node name="SlopeHighHalf" parent="Rooms/SlopeTestRoom" instance=ExtResource( "11" )]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.5, 0, 8.5)

[node name="CrossPlate" parent="Rooms/SlopeTestRoom" instance=ExtResource( "12" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0.8, 0)

[node name="CSGMesh3D" type="CSGMesh3D" parent="Rooms/SlopeTestRoom"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 7.689, 2.20372, 9.07939)
use_collision = true
mesh = SubResource( "PrismMesh_3y0qp" )
material = SubResource( "StandardMaterial3D_pcexi" )
script = null

[node name="LiftTestRoom" type="Node3D" parent="Rooms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20)
script = null

[node name="Room" parent="Rooms/LiftTestRoom" instance=ExtResource( "4" )]

[node name="MovingPlatform" parent="Rooms/LiftTestRoom" instance=ExtResource( "16" )]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="MovingSlope" parent="Rooms/LiftTestRoom" instance=ExtResource( "17" )]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -5, 0, -7.5)

[node name="MovingPlatform2" parent="Rooms/LiftTestRoom" instance=ExtResource( "18" )]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 7.5, 0, 7)

[node name="MovingBoxes" parent="Rooms/LiftTestRoom" instance=ExtResource( "19" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -7.5)

[node name="MovingLift" parent="Rooms/LiftTestRoom" instance=ExtResource( "20" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.5, 0, 8.5)

[node name="RollingCylinder" parent="Rooms/LiftTestRoom" instance=ExtResource( "21" )]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -7.5, 1.5, 4)

[node name="SpinningPlane" parent="Rooms/LiftTestRoom" instance=ExtResource( "22" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 6)

[node name="RollingPlane" parent="Rooms/LiftTestRoom" instance=ExtResource( "23" )]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.5, 1, 6)

[node name="BlankRoom" type="Node3D" parent="Rooms"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20)
script = null

[node name="Room" parent="Rooms/BlankRoom" instance=ExtResource( "4" )]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Environments" type="Node3D" parent="."]
script = null

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environments"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 0, 0)
shadow_enabled = true
script = null

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environments"]
environment = SubResource( "3" )
script = null

[node name="OmniLight3D" type="OmniLight3D" parent="Environments"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25, 0)
light_energy = 25.0
omni_range = 50.0
script = null

[node name="Texts" type="CanvasLayer" parent="."]
process_mode = 3
script = null

[node name="DrawDebug" type="Control" parent="Texts"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( "24_ac82k" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Command" type="Label" parent="Texts"]
offset_top = 684.0
offset_right = 1280.0
offset_bottom = 710.0
theme_override_colors/font_color = Color(0.027451, 0.407843, 1, 1)
text = "Move: ZQSD /  Jump: Space / Run: Shift / Pause Mode: P / Enter: reset position"
align = 1
valign = 2
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Label" parent="Texts"]
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 33.0
theme_override_colors/font_outline_color = Color(0.2, 0.2, 0.2, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 2
structured_text_bidi_override_options = []
script = ExtResource( "24_8udls" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Label" parent="Texts"]
offset_left = 15.1291
offset_top = 644.21
offset_right = 119.129
offset_bottom = 670.21
theme_override_font_sizes/font_size = 25
text = "PAUSE MODE"
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseCommand" type="Label" parent="Texts"]
offset_left = 17.0
offset_top = 681.0
offset_right = 182.0
offset_bottom = 704.0
text = "Press the O to move to the next frame"
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GDScriptButton" type="CheckButton" parent="Texts"]
offset_left = 1065.72
offset_top = 18.7398
offset_right = 1266.72
offset_bottom = 58.7398
focus_mode = 0
pressed = true
text = "Use GD method"
align = 2
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SnapButton" type="CheckButton" parent="Texts"]
offset_left = 1099.72
offset_top = 53.7398
offset_right = 1264.72
offset_bottom = 93.7398
focus_mode = 0
pressed = true
text = "Floor Snap"
align = 2
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StopSlopeButton" type="CheckButton" parent="Texts"]
offset_left = 1079.86
offset_top = 85.4664
offset_right = 1264.86
offset_bottom = 125.466
focus_mode = 0
pressed = true
text = "Stop on Slope"
align = 2
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConstantSpeedButton" type="CheckButton" parent="Texts"]
offset_left = 1072.37
offset_top = 117.993
offset_right = 1266.37
offset_bottom = 157.993
focus_mode = 0
pressed = true
text = "Constan Speed"
align = 2
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnFloorButton" type="CheckButton" parent="Texts"]
offset_left = 1072.37
offset_top = 153.993
offset_right = 1266.37
offset_bottom = 193.993
focus_mode = 0
pressed = true
text = "On floor only"
align = 2
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AirFrictionButton" type="CheckButton" parent="Texts"]
offset_left = 1072.37
offset_top = 190.993
offset_right = 1266.37
offset_bottom = 230.993
focus_mode = 0
pressed = true
text = "Air friction"
align = 2
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccelerationButton" type="CheckButton" parent="Texts"]
offset_left = 1068.46
offset_top = 228.106
offset_right = 1262.46
offset_bottom = 268.106
focus_mode = 0
pressed = true
text = "Acceleration"
align = 2
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxFloorAngleSlider" type="HSlider" parent="Texts"]
offset_left = 1204.0
offset_top = 272.0
offset_right = 1252.0
offset_bottom = 288.0
focus_mode = 0
step = 5.0
value = 45.0
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxFloorAngleLabel" type="Label" parent="Texts"]
anchor_left = 0.857645
anchor_top = 0.329572
anchor_right = 0.888895
anchor_bottom = 0.361516
offset_left = -58.6982
offset_top = 29.2533
offset_right = 56.3018
offset_bottom = 32.2536
text = "Floor max angle: 45°"
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": true
}

[node name="WallMinAngleSlideSlider" type="HSlider" parent="Texts"]
offset_left = 1205.25
offset_top = 299.476
offset_right = 1253.25
offset_bottom = 315.476
focus_mode = 0
step = 5.0
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WallMinAngleSlideLabel" type="Label" parent="Texts"]
anchor_left = 0.857645
anchor_top = 0.329572
anchor_right = 0.888895
anchor_bottom = 0.361516
offset_left = -49.9561
offset_top = 56.7291
offset_right = 65.0439
offset_bottom = 59.7294
text = "Min slide angle: 0°"
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="Texts"]
offset_left = 1096.86
offset_top = 331.786
offset_right = 1256.86
offset_bottom = 371.786
focus_mode = 0
pressed = true
text = "Draw lines"
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Node" parent="."]
process_mode = 3
script = ExtResource( "24_4v7fj" )

[connection signal="toggled" from="Texts/GDScriptButton" to="." method="_on_GDScriptButton_toggled"]
[connection signal="toggled" from="Texts/SnapButton" to="." method="_on_SnapButton_toggled"]
[connection signal="toggled" from="Texts/StopSlopeButton" to="." method="_on_StopSlopeButton_toggled"]
[connection signal="toggled" from="Texts/ConstantSpeedButton" to="." method="_on_ConstantSpeedButton_toggled"]
[connection signal="toggled" from="Texts/OnFloorButton" to="." method="_on_OnFloorButton_toggled"]
[connection signal="toggled" from="Texts/AirFrictionButton" to="." method="_on_AirFrictionButton_toggled"]
[connection signal="toggled" from="Texts/AccelerationButton" to="." method="_on_AccelerationButton_toggled"]
[connection signal="value_changed" from="Texts/MaxFloorAngleSlider" to="." method="_on_MaxFloorAngleSlider_value_changed"]
[connection signal="value_changed" from="Texts/WallMinAngleSlideSlider" to="." method="_on_WallMinAngleSlideSlider_value_changed"]
[connection signal="toggled" from="Texts/CheckButton" to="." method="_on_CheckButton_toggled"]
